--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,22 +2,23 @@
 <resources>
 
     <string name="app_name">Tweedy Bird</string>
-
     <string name="login_label">Log in</string>
     <string name="title_activity_timeline">Timeline</string>
-    
     <string name="user_picture">Profile picture</string>
     <string name="user_name">Name Me</string>
     <string name="user_handle">\@User</string>
     <string name="tweet_message">Ain\'t She Tweet!</string>
     <string name="tweet_date">Date</string>
-    
     <string name="action_compose">Tweet</string>
     <string name="action_refresh">Refresh</string>
-    
     <string name="title_activity_compose">Compose Tweet</string>
     <string name="label_cancel">Cancel</string>
     <string name="label_tweet">Tweet</string>
     <string name="tweet_hint">What\'s happening?</string>
+    <string name="action_profile">Profile</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="profile_image">Profile Image</string>
 
 </resources>
